# leave-agent-

./: .env  .gitignore  main.py  pyproject.toml
app/: agentcore_runtime.py  config.py  main.py
app/agents/: employee_agent.py  holiday_agent.py  leave_agent.py  orchestrator.py  policy_agent.py  submission_agent.py
app/api/lambdas/: lambda_function.py
app/services/: dynamodb_service.py  intent.py  ses_service.py
app/tools/: approval_tools.py  employee_tools.py  holiday_tools.py  leave_submission_tool.py  leave_tools.py
app/utils/: bedrock.py  llm.py  model.py  validators.py
scripts/: test_bedrock.py  test_database.py  test_dynamodb.py  test_employee_tool.py  test_holiday.py  test_leave_submission.py  test_leave_tool.py  test_submit_leave.py
