[project]
name = "leave-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore>=1.17.0",
    "boto3>=1.43.36",
    "pydantic>=2.13.4",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "strands-agents>=1.45.0",
]
